Setting up for Cooper calculator

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,5 +24,9 @@ navigation history that also transitions its views in and out.
   <ion-nav-view name="tab-about"></ion-nav-view>
 </ion-tab>
 
+<!-- BmiTab -->
+<ion-tab title="CooperCalculator" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/bmi">
+  <ion-nav-view name="tab-cooper"></ion-nav-view>
+</ion-tab>
 
 </ion-tabs>
